# aoc2020

./: Cargo.toml
src/: day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  main.rs  utils.rs
