[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Anders Quist <anders@qinfo.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
parse-display = "0.4.0"
thiserror = "1.0.22"